--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
+    <title></title>
+  </head>
+  <body>
+    <div></div>
+  </body>
+</html>  
