--- a/Meu site.html
+++ b/Meu site.html
@@ -1,1 +1,7 @@
-# web002
+<!DOCTYPE html>
+<html>
+  <head>
+    <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
+  </head>
+  <body></body>
+</html>
