--- a/Meu site.html
+++ b/Meu site.html
@@ -3,5 +3,8 @@
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
-  <body></body>
+  <body background-img= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg">
+    <h2>II Congresso Mundial da Mata</h2>
+    <div>Inscrição</div>
+  </body>
 </html>
