--- a/Meu site.html
+++ b/Meu site.html
@@ -3,7 +3,7 @@
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
-  <body background-img= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg">
+  <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
     <h2>II Congresso Mundial da Mata</h2>
     <div>Inscrição</div>
   </body>
