--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
-    <title></title>
   </head>
-  <body>
-    <div></div>
+  <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
+    <h2>II Congresso Mundial da Mata</h2>
+    <div>Inscrição</div>
   </body>
-</html>  
+</html>
