--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
     <h2>II Congresso Mundial da Mata</h2>
-    <div>Inscrição</div>
+    <div><p>Inscrição</p></div>
   </body>
 </html>
