--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
     <h1>II Congresso Mundial da Mata</h1>
     <h1>Aldeia Ibelê</h1>
-    <div><p>Inscrição</p></div>
+    <div><h3>Inscrição</h3></div>
   </body>
 </html>
