--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
   <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
-    <h1>II Congresso Mundial da Mata</h1>
-    <h1>Aldeia Ibelê</h1>
+    <h1>II Torneio Internacional de Kung Fu</h1>
+    <h1>Academia Ip Man</h1>
     <a href= "www.google.com"><div><h2>Inscrição</h2></div></a>
   </body>
 </html>
