--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
-  <body background= "http://wallpaper.ultradownloads.com.br/175134_Papel-de-Parede-Folha-verde--175134_1600x1200.jpg" bgproperties="fixed">
+  <body background= "http://fc08.deviantart.net/fs7/i/2005/252/3/5/Shaolin_by_t4nuki.jpg" bgproperties="fixed">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
     <a href= "www.google.com"><div><h2>Inscrição</h2></div></a>
