--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body background= "http://fc08.deviantart.net/fs7/i/2005/252/3/5/Shaolin_by_t4nuki.jpg" bgproperties="fixed">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
-    <a href= "www.google.com"><div><h2>Inscrição</h2></div></a>
+    <div><a href= "www.google.com"><h2>Inscrição</h2></a></div></a>
   </body>
 </html>
