--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
-  <body background= "http://fc08.deviantart.net/fs7/i/2005/252/3/5/Shaolin_by_t4nuki.jpg" bgproperties="fixed">
+  <body background= "http://img09.deviantart.net/6d86/i/2008/030/5/3/dragon_wallpaper_by_tillo_neko.jpg" bgproperties="fixed">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
     <div><a href= "www.google.com"><h2>Inscrição</h2></a></div></a>
