--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
   </head>
-  <body background= "http://www.seahorsearts.co.uk/images/fengshou2_1680x1050_widescr.jpg" bgproperties="fixed">
+  <body background= "http://2.bp.blogspot.com/-lm9EHXAkqOU/TtOdQZZDS3I/AAAAAAAABCw/JOJqwHf-xrg/s1600/FantasyDragon41518.jpg" bgproperties="fixed">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
     <div><a href= "www.google.com"><h2>Inscrição</h2></a></div></a>
