--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body background= "http://wallpaper.ultradownloads.com.br/287296_Papel-de-Parede-Dragao-Chines--287296_1920x1080.jpg" bgproperties="fixed">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
-    <div><a href= "www.google.com"><h2>Inscrição</h2></a></div></a>
+    <div><a href= "https://www.google.com.br/"><h2>Inscrição</h2></a></div></a>
   </body>
 </html>
