--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
     <title>Torneio de Kung Fu</title>
   </head>
-  <body background= "http://wallpaper.ultradownloads.com.br/287296_Papel-de-Parede-Dragao-Chines--287296_1920x1080.jpg" bgproperties="fixed">
+  <body background= "http://wallpaper.ultradownloads.com.br/287296_Papel-de-Parede-Dragao-Chines--287296_1920x1080.jpg">
     <h1>II Torneio Internacional de Kung Fu</h1>
     <h1>Academia Ip Man</h1>
     <div><a href= "http://www.kungfuchampionship.com/"><h2>Inscrição</h2></a></div></a>
