--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
+    <link rel="icon" type="image/png" href="http://previews.123rf.com/images/sababa66/sababa661011/sababa66101100011/8146812-Abstract-grunge-rubber-stamp-with-man-silhouettes-fighting-Kung-fu-stamp--Stock-Vector.jpg">
     <title>Torneio de Kung Fu</title>
   </head>
   <body background= "http://wallpaper.ultradownloads.com.br/287296_Papel-de-Parede-Dragao-Chines--287296_1920x1080.jpg">
